added hooks and signout logic